--- a/src/style.css
+++ b/src/style.css
@@ -21,10 +21,12 @@
 
 
 
-.track:hover .track-no, .track-selected .track-no{
-    visibility: hidden;
+.track:hover .track-no,
+.track.selected .track-no {
+  visibility: hidden;
 }
 
-.track:hover .play .track-selected .play{
-    visibility: visible;
+.track:hover .play,
+.track.selected .play {
+  visibility: visible;
 }
