--- a/src/style.css
+++ b/src/style.css
@@ -2,24 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
-.grid-template-areas{
-    grid-template-areas: 
+.grid-template-areas {
+  grid-template-areas:
     "sidenav main"
     "now-playing now-playing";
 }
 
-
-.grid-template-areas .content{
-    grid-area: main;
+.grid-template-areas .content {
+  grid-area: main;
 }
-.grid-template-areas .sidenav{
-    grid-area: sidenav;
+.grid-template-areas .sidenav {
+  grid-area: sidenav;
 }
-.grid-template-areas .now-playing{
-    grid-area: now-playing;
+.grid-template-areas .now-playing {
+  grid-area: now-playing;
 }
-
-
 
 .track:hover .track-no,
 .track.selected .track-no {
@@ -29,4 +26,9 @@
 .track:hover .play,
 .track.selected .play {
   visibility: visible;
+}
+
+.track.playing .track-no,
+.track.playing .song-title {
+  color: theme("colors.green");
 }
